# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[workspace]
resolver = "2"
members = [
    "components/calendar",
]
exclude = [
    # This crate uses datagen which requires downloading ZIP files during build,
    # so we don't want to build it as part of the workspace.
    "ffi/ecma402",
    # GNaw needs to be run from outside the workspace for features to work
    "ffi/gn",
]

# LTO is needed for WASM and other size-optimized builds,
# and it improve the performance of benchmarks
[profile.release]
lto = true

[profile.release-opt-size]
inherits = "release"
opt-level = "s"

# Enable debug information specifically for memory profiling.
# https://docs.rs/dhat/0.2.1/dhat/#configuration
#
# 2021-01-08: This would be nicer as a named profile, e.g. [profile.memory]
# https://github.com/rust-lang/cargo/issues/6988
[profile.bench]
debug = true
debug-assertions = false
